<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.stian.mattis.FiftyQuestions"
    android:background="@drawable/snow">


    <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:layout_centerHorizontal="true"

        android:layout_alignParentBottom="false"
        android:layout_above="@+id/sjekk"
        android:contextClickable="false"
        android:layout_below="@+id/frameLayout">
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/radioButton1"
        android:id="@+id/radioButton1"
        android:checked="false"
        android:textColor="#010101"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_checkbox"
        android:button="@android:color/transparent"
        android:paddingLeft="7dp"
        android:layout_weight="0.1"
        android:paddingRight="7dp"
        android:onClick="activateSjekk" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/radioButton2"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:textColor="#010101"
        android:background="@drawable/custom_checkbox"
        android:button="@android:color/transparent"
        android:layout_marginTop="4dp"
        android:paddingLeft="7dp"
        android:layout_weight="0.1"
        android:paddingRight="7dp"
        android:onClick="activateSjekk" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/radioButton3"
        android:id="@+id/radioButton3"
        android:checked="false"
        android:textColor="#010101"
        android:background="@drawable/custom_checkbox"
        android:button="@android:color/transparent"
        android:layout_marginTop="4dp"
        android:paddingLeft="7dp"
        android:layout_weight="0.1"
        android:paddingRight="7dp"
        android:onClick="activateSjekk" />
</RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/Question"
        android:id="@+id/question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/radioGroup"
        android:textColor="#010101"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:text="@string/sjekk"
        android:id="@+id/sjekk"
        android:layout_gravity="right"
        android:onClick="startSjekk"
        android:layout_alignStart="@+id/nextQuestion"
        android:layout_alignEnd="@+id/nextQuestion"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:text="Neste Spørsmål"
        android:id="@+id/nextQuestion"
        android:onClick="nextQuestion"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:text="Ferdig"
        android:id="@+id/ferdig"
        android:layout_alignBottom="@+id/sjekk"
        android:layout_alignLeft="@+id/sjekk"
        android:layout_alignStart="@+id/sjekk"
        android:layout_alignRight="@+id/sjekk"
        android:layout_alignEnd="@+id/sjekk"
        android:onClick="startMain"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/scoreText"
            android:textColor="#010101"
            android:gravity="center_vertical"
            android:layout_gravity="right|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/questionNum"
            android:textColor="#010101"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/rightWrong"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:textColor="#010101" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/staatt"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="70dp"
            android:textSize="15dp"
            android:textColor="#010101" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="166dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            />

    </FrameLayout>

</RelativeLayout>
